# Edge-Detection-Android

./: .gitignore  README.md  TODO.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: shader_fragment.glsl  shader_vertex.glsl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv_processing.cpp  opencv_processing.h
app/src/main/java/com/example/edgeapp/: CameraActivity.java  GLRenderer.java  GLView.java  JNIUtils.java
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html
web/src/: main.ts
